welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: illegal start of simple pattern
  var String a= litMessage()
              ^BDRBuggle:3: error: '=' expected but ';' found.
  if(a=="R"){
^